Implement reset by stateId and stateExecutionId (#99)
