# service/api/temporal/reset.go
@@ -8,12 +8,13 @@ import (
 	"go.temporal.io/api/common/v1"
 	"go.temporal.io/api/enums/v1"
 	"go.temporal.io/api/workflowservice/v1"
+	"go.temporal.io/sdk/converter"
 )
 
 func getResetEventIDByType(ctx context.Context, resetType service.ResetType,
 	namespace, wid, rid string,
-	frontendClient workflowservice.WorkflowServiceClient,
-	historyEventId int32, earliestHistoryTimeStr string,
+	frontendClient workflowservice.WorkflowServiceClient, converter converter.DataConverter,
+	historyEventId int32, earliestHistoryTimeStr string, stateId, stateExecutionId string,
 ) (resetBaseRunID string, workflowTaskFinishID int64, err error) {
 	// default to the same runID
 	resetBaseRunID = rid
@@ -34,6 +35,11 @@ func getResetEventIDByType(ctx context.Context, resetType service.ResetType,
 		}
 	case service.ResetTypeBeginning:
 		resetBaseRunID, workflowTaskFinishID, err = getFirstWorkflowTaskEventID(ctx, namespace, wid, rid, frontendClient)
+		if err != nil {
+			return
+		}
+	case service.ResetTypeStateId, service.ResetTypeStateExecutionId:
+		workflowTaskFinishID, err = getDecisionEventIDByStateOrStateExecutionId(ctx, namespace, wid, rid, stateId, stateExecutionId, frontendClient, converter)
 		if err != nil {
 			return
 		}
@@ -83,6 +89,7 @@ func getFirstWorkflowTaskEventID(ctx context.Context, namespace, wid, rid string
 	}
 	return
 }
+
 func getEarliestDecisionEventID(
 	ctx context.Context,
 	namespace string, wid string,
@@ -101,7 +108,8 @@ func getEarliestDecisionEventID(
 
 OuterLoop:
 	for {
-		resp, err := frontendClient.GetWorkflowExecutionHistory(ctx, req)
+		var resp *workflowservice.GetWorkflowExecutionHistoryResponse
+		resp, err = frontendClient.GetWorkflowExecutionHistory(ctx, req)
 		if err != nil {
 			return 0, composeErrorWithMessage("GetWorkflowExecutionHistory failed", err)
 		}
@@ -120,9 +128,61 @@ OuterLoop:
 		}
 	}
 	if decisionFinishID == 0 {
-		return 0, composeErrorWithMessage("Get DecisionFinishID failed", fmt.Errorf("no DecisionFinishID"))
+		return 0, composeErrorWithMessage("Get historyEventId failed", fmt.Errorf("no historyEventId"))
 	}
 	return
+}
+
+func getDecisionEventIDByStateOrStateExecutionId(
+	ctx context.Context,
+	namespace string, wid string,
+	rid string, stateId, stateExecutionId string,
+	frontendClient workflowservice.WorkflowServiceClient, converter converter.DataConverter,
+) (decisionFinishID int64, err error) {
+	req := &workflowservice.GetWorkflowExecutionHistoryRequest{
+		Namespace: namespace,
+		Execution: &common.WorkflowExecution{
+			WorkflowId: wid,
+			RunId:      rid,
+		},
+		MaximumPageSize: 1000,
+		NextPageToken:   nil,
+	}
+
+	for {
+		var resp *workflowservice.GetWorkflowExecutionHistoryResponse
+		resp, err = frontendClient.GetWorkflowExecutionHistory(ctx, req)
+		if err != nil {
+			return 0, composeErrorWithMessage("GetWorkflowExecutionHistory failed", err)
+		}
+		for _, e := range resp.GetHistory().GetEvents() {
+			if e.GetEventType() == enums.EVENT_TYPE_WORKFLOW_TASK_COMPLETED {
+				decisionFinishID = e.GetEventId()
+			}
+			if e.GetEventType() == enums.EVENT_TYPE_ACTIVITY_TASK_SCHEDULED {
+				if e.GetActivityTaskScheduledEventAttributes().GetActivityType().GetName() == "StateStart" {
+					var backendType service.BackendType
+					var input service.StateStartActivityInput
+					err = converter.FromPayloads(e.GetActivityTaskScheduledEventAttributes().Input, &backendType, &input)
+					if err != nil {
+						return 0, composeErrorWithMessage("GetWorkflowExecutionHistory failed", err)
+					}
+					if input.Request.WorkflowStateId == stateId || input.Request.Context.StateExecutionId == stateExecutionId {
+						if decisionFinishID == 0 {
+							return 0, composeErrorWithMessage("GetWorkflowExecutionHistory failed", fmt.Errorf("invalid history or something goes very wrong"))
+						}
+						return
+					}
+				}
+			}
+		}
+		if len(resp.NextPageToken) != 0 {
+			req.NextPageToken = resp.NextPageToken
+		} else {
+			break
+		}
+	}
+	return 0, composeErrorWithMessage("Get historyEventId failed", fmt.Errorf("no historyEventId"))
 }
 
 func composeErrorWithMessage(msg string, err error) error {
